--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,18 @@
-body p {
-    background: #dddddd;
+.container {
+    margin-top: 20px;
 }
+
+footer {
+    border-top-style: solid;
+    border-top-width: 2px;
+    border-top-color: black;
+    padding-top: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    clear: both;
+}
+
+footer p {
+    text-align: center;
+}
+
