--- a/views/index.erb
+++ b/views/index.erb
@@ -1,10 +1,36 @@
 <!DOCTYPE html>
-<html>
-   <head>
-      <title>VidMuster!</title>
-      <link rel="stylesheet" type="text/css" href="/css/styles.css">
-   </head>
-   <body>
-      <p>Nothing here yet! Coming Soon!</p>
-   </body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Vidmuster >> Get more information about your favorite videos</title>
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="/css/styles.css" />
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+  </head>
+  <body>
+    <div class="container">
+      <div>
+        <form class="form-search text-center span6" onsubmit="return false;">
+            <input type="search" class="search-query span5" placeholder="Search" tabindex="1">
+            <button type="submit" class="btn btn-default">
+              <i class="icon-search icon-large"></i>
+            </button>            
+        </form>        
+      </div>
+      <div class="container-fluid">
+        <div class="row-fluid">
+          <div class="span10">
+            <!-- Info and playing videos content -->
+          </div>
+          
+          <div class="span2">
+            <!-- Videos list content -->
+          </div>
+        </div>
+      </div>
+      <footer>
+        <p>Created with love by <a target="_blank" href="http://alabidan.me">Daniel Alabi</a>&nbsp;&copy; 2013</p>
+      </footer>
+    </div>
+  </body>
 </html>
