--- a/views/index.erb
+++ b/views/index.erb
@@ -1,30 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html ng-app="myapp" lang="en">
   <head>
     <meta charset="utf-8" />
     <title>Vidmuster >> Get more information about your favorite videos</title>
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="/css/styles.css" />
-	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" type="text/css" href="/css/styles.css" />    
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <script src="/js/jquery.min.js" type="text/javascript"></script>
+    <script src="/js/angular.min.js" type="text/javascript"></script>
+    <script src="http://www.google.com/jsapi" type="text/javascript"></script>
+    <script>
+      google.load("swfobject", "2.1");
+    </script>
+    <script src="/js/vidmuster.js" type="text/javascript"></script>
   </head>
   <body>
     <div class="container">
-      <div>
-        <form class="form-search text-center span6" onsubmit="return false;">
-            <input type="search" class="search-query span5" placeholder="Search" tabindex="1">
-            <button type="submit" class="btn btn-default">
-              <i class="icon-search icon-large"></i>
-            </button>            
-        </form>        
-      </div>
+      <form class="form-search text-center span6" onsubmit="return false;">
+        <input type="search" class="search-query span5" placeholder="Search" tabindex="1">
+        <button type="submit" class="btn btn-default">
+          <i class="icon-search icon-large"></i>
+        </button>            
+      </form> 
+      <span id="current-suggestion">{{currentSuggestion}}</span>
       <div class="container-fluid">
         <div class="row-fluid">
-          <div class="span10">
-            <!-- Info and playing videos content -->
+          <div class="span8">
+            <div id="current-video">
+            </div>
+            <div id="news-search-trunk">
+              This is where you put news.
+            </div>
           </div>
           
-          <div class="span2">
-            <!-- Videos list content -->
+          <div class="span3">
+            <ul id="videos-search-trunk">
+              <li id="play-{{$index}}" ng-repeat="video in videos">
+                <a ng-href="javascript:loadAndPlayVideo('{{video.id}}', {{$index}})">
+                  <img ng-src="{{video.thumbnail.sqDefault}}" />
+                  <p>{{video.title}}</p>
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
