--- a/views/index.erb
+++ b/views/index.erb
@@ -4,8 +4,9 @@
     <meta charset="utf-8" />
     <title>Vidmuster >> Get more information about your favorite videos</title>
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="/css/styles.css" />    
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link href="http://fonts.googleapis.com/css?family=The+Girl+Next+Door" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="/css/styles.css" />    
     <script src="/js/jquery.min.js" type="text/javascript"></script>
     <script src="/js/angular.min.js" type="text/javascript"></script>
     <script src="http://www.google.com/jsapi" type="text/javascript"></script>
@@ -17,12 +18,14 @@
   <body>
     <div class="container">
       <form class="form-search text-center span6" onsubmit="return false;">
-        <input type="search" class="search-query span5" placeholder="Search" tabindex="1">
+        <input type="search" class="search-query" placeholder="Search" tabindex="1">
         <button type="submit" class="btn btn-default">
           <i class="icon-search icon-large"></i>
         </button>            
       </form> 
+      <br />
       <span id="current-suggestion">{{currentSuggestion}}</span>
+      <br />
       <div class="container-fluid">
         <div class="row-fluid">
           <div class="span8">
